discussion/kv_engine/180969/180969_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52680: Rename ItemEviction

A second implementation will soon be added, so give the existing
version a more descriptive name.

Change-Id: I550c75467840ad744c6c7f889dd316c3562959e4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-10-07 16:10:44.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-07 16:22:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20960/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50: error: use of undeclared identifier "ItemEviction" [clang-diagnostic-error]
        auto evictionStrategy = std::make_unique<ItemEviction>(
                                                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20960/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: use of undeclared identifier "ItemEviction" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20960/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50083/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc(211): error C2065: "ItemEviction": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50083/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22375/ : FAILURE

Compile error at [2022-10-07T16:14:11.157Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: use of undeclared identifier "ItemEviction"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22375/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10785/ : FAILURE

Compile error at [2022-10-07T16:13:24.832Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: ?ItemEviction? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10785/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10686/ : FAILURE

Compile error at [2022-10-07T16:14:23.677Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: use of undeclared identifier "ItemEviction"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10686/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24200/ : FAILURE

Compile error at [2022-10-07T16:16:26.894Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: use of undeclared identifier "ItemEviction"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24200/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23359/ : FAILURE

Compile error at [2022-10-07T16:15:33.612Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: ?ItemEviction? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23359/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22964/ : FAILURE

Compile error at [2022-10-07T16:17:34.469Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: ?ItemEviction? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22964/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31381/ : FAILURE

Compile error at [2022-10-07T16:18:55.955Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/benchmarks/paging_visitor_bench.cc:211:50:
error: use of undeclared identifier "ItemEviction"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31381/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20195/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42052/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
